# vibe-research

./: .gitignore  README.md  pyproject.toml  reliastep_common.py
analysis/: __init__.py  aggregate_results.py  check_gpu_budget.py  export_training_curves.py  infer_latent_reliability.py  score_reliability_recovery.py
configs/: local.toml  local_fast.toml
docs/: IRIS_V42_RUNBOOK.md
eval/: run_all_evals.py  run_iris_shift_eval.py
prompts/: ideation.md  implementation.md  literature.md  planning.md
remote/: cluster_env.sh  slurm_run_experiment.sh
scripts/: bootstrap_local.sh  bootstrap_on_cluster.sh  build_iris_partial_id_pairs.py  build_structured_noise_features.py  create_iris_run.sh  download_datasets.py  generate_rollouts.py  judge_step_pairs.py  make_controlled_noise_set.py  make_judge_personas.py  monitor_local_fars.sh  monitor_remote_fars.sh  prefetch_assets.py  prefetch_assets_hfcli.sh  remote_bootstrap.sh  start_cycle.sh  start_monitor_web.sh  submit_remote.sh  sync_to_zw1.sh  tail_remote_logs.sh  watch_local_run.sh  watch_remote_run.sh
src/vibe_research/: cli.py  config.py  execution.py  literature.py  llm_client.py  pipeline.py  web_monitor.py
src/vibe_research.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
train/: reliastep_train_lib.py  train_grpo_outcome_only.py  train_iris_shift_dpo.py  train_latent_step_grpo.py  train_reliastep_grpo.py
