[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-research"
version = "0.1.0"
description = "Local orchestrator + remote executor for low-resource RL/LLM research cycles"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.scripts]
vibe-research = "vibe_research.cli:main"
vibe-monitor = "vibe_research.web_monitor:main"

[tool.setuptools.packages.find]
where = ["src"]
